# plugins

./: CMakeLists.txt
dictionary/: CMakeLists.txt  metadata.json
dictionary/src/: configwidget.cpp  configwidget.h  configwidget.ui  dictconnection.cpp  dictconnection.h  dictreturncodes.h  extension.cpp  extension.h
